--- a/views/settings/bot-settings.ejs
+++ b/views/settings/bot-settings.ejs
@@ -217,7 +217,7 @@
                             <li><code>/balance</code> - View vacation balance</li>
                             <li><code>/homeoffice [date]</code> - Request home office (1 day advance)</li>
                             <li><code>/vacation start [end]</code> - Request vacation (2+ days advance)</li>
-                            <li><code>/sick</code> - Report sick day for tomorrow</li>
+                            <li><code>/sick</code> - Report sick day for today</li>
                             <li><code>/help</code> - Show available commands</li>
                         </ul>
                         <p style="font-size: 12px; color: #666; margin-top: 5px;">
